MDEV-25917 create table like fails if source table is partitioned and engine is myisam or aria with data directory.

Create table like removes data_file_path/index_file_path from the
thd->work_partition_info.